feat: basic repository browsing & branch selector
